--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#Who We Are" class = "navbar__links" id = "intro">Who We Are</a>
             </li> "
             <li class = "navbar__btn">
-                <a href = "#return" class = "button" id = "return">Return</a>
+                <a href = "#Order" class = "button" id = "order">Order</a>
             </li>
         </ul>
 
