--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="navbar__menu">
             <li class = "navbar__item">
-                <a href="#home" class = "navbar__links" id = "home">HOME</a>
+                <a href="#home" class = "navbar__links" id = "home">Home</a>
             </li>
             <li class = "navbar__item">
                 <a href="#Who We Are" class = "navbar__links" id = "intro">Who We Are</a>
