--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 
     </div>
     </nav>
+
+    <!-- Hero -->
+    <div class="hero" id="home">
+        <div class="hero__container">
+            <h1 class="hero__heading">A <span>Lifestyle</span></h1>
+            <p class = "hero__description"> Experience new possibilities</p>
+            <button class = "main__btn"><a href="#">Explore</a>/<button>
+        </div>
+    </div>
 </body>
 
 
