--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll Website</title>
+    <title>Crushers</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -16,25 +16,25 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#home" id="navbar__logo">COLOR</a>
+        <a href="#home" id="navbar__logo">HOME</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="#home" class="navbar__links" id="home-page">Home</a>
+            <a href="#home" class="navbar__links" id="home-page">HOME</a>
           </li>
           <li class="navbar__item">
-            <a href="#about" class="navbar__links" id="about-page">About</a>
+            <a href="#about" class="navbar__links" id="about-page">WHO WE ARE</a>
           </li>
           <li class="navbar__item">
-            <a href="#services" class="navbar__links" id="services-page"
-              >Services</a
+            <a href="#services" class="navbar__links" id="products-page"
+              >PRODUCTS</a
             >
           </li>
           <li class="navbar__btn">
-            <a href="#sign-up" class="button" id="signup">Sign Up</a>
+            <a href="#order" class="button" id="signup">ORDER</a>
           </li>
         </ul>
       </div>
@@ -43,7 +43,7 @@
     <!-- Hero Section -->
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="hero__heading">Choose your <span>colors</span></h1>
+        <h1 class="hero__heading">THE CRUSHERS <span>VISION</span></h1>
         <p class="hero__description">Unlimited Possibilities</p>
         <button class="main__btn"><a href="#">Explore</a></button>
       </div>
@@ -57,35 +57,25 @@
         </div>
         <div class="main__content">
           <h1>What do we do?</h1>
-          <h2>We help businesses scale</h2>
-          <p>Schedule a call to learn more about our services</p>
-          <button class="main__btn"><a href="#">Schedule Call</a></button>
+          <h2>Creating clothing that <b>impacts</b></h2>
+          <h2>Meet the team</h2>
+          <p>Kenny, Araash, Henrik, Ronit [MORE INFO LATER]</p>
         </div>
       </div>
     </div>
 
-    <!-- Services Section -->
+    <!-- Products Section -->
     <div class="services" id="services">
-      <h1>Our Services</h1>
+      <h1>Our Products</h1>
       <div class="services__wrapper">
         <div class="services__card">
-          <h2>Custom Colorways</h2>
-          <p>AI Powered technology</p>
+          <h2>T-Shirts</h2>
+          <p>Available in two logos</p>
           <div class="services__btn"><button>Get Started</button></div>
         </div>
         <div class="services__card">
-          <h2>Are you Ready?</h2>
-          <p>Take the lepa</p>
-          <div class="services__btn"><button>Get Started</button></div>
-        </div>
-        <div class="services__card">
-          <h2>Full Gradients</h2>
-          <p>100 Combinations</p>
-          <div class="services__btn"><button>Get Started</button></div>
-        </div>
-        <div class="services__card">
-          <h2>Infinite Choices</h2>
-          <p>1000's of colors</p>
+          <h2>Colors</h2>
+          <p>With 46 colors, there are over 186 combinations!</p>
           <div class="services__btn"><button>Get Started</button></div>
         </div>
       </div>
@@ -95,9 +85,7 @@
     <div class="main" id="sign-up">
       <div class="main__container">
         <div class="main__content">
-          <h1>Join Our Team</h1>
-          <h2>Sign Up Today</h2>
-          <p>See what makes us different</p>
+          <h1>Our customers</h1>
           <button class="main__btn"><a href="#">Sign Up</a></button>
         </div>
         <div class="main__img--container">
