--- a/index.html
+++ b/index.html
@@ -102,34 +102,32 @@
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>About Us</h2>
-            <a href="/sign__up">How it works</a> <a href="/">Testimonials</a>
-            <a href="/">Careers</a> <a href="/">Terms of Service</a>
+            <a href="/sign__up">Araash</a> <a href="/">Kenny</a>
+            <a href="/">Henrik</a> <a href="/">Ronit</a>
           </div>
           <div class="footer__link--items">
             <h2>Contact Us</h2>
-            <a href="/">Contact</a> <a href="/">Support</a>
-            <a href="/">Destinations</a>
+            <a href="araashahuja28@gmail.com">Email</a>
+            <a href="https://www.google.com/maps/place/Robbinsville+Twp,+NJ/@40.2229584,-74.6280658,13z/data=!3m1!4b1!4m5!3m4!1s0x89c160755f229cbf:0x87f384288ef8e520!8m2!3d40.2162036!4d-74.6195327">Location</a>
           </div>
         </div>
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
-            <h2>Videos</h2>
-            <a href="/">Submit Video</a> <a href="/">Ambassadors</a>
-            <a href="/">Agency</a>
+            <h2>Photos</h2>
+            <a href="araashahuja28@gmail.com">Submit Photos</a> 
           </div>
           <div class="footer__link--items">
             <h2>Social Media</h2>
-            <a href="/">Instagram</a> <a href="/">Facebook</a>
-            <a href="/">Youtube</a> <a href="/">Twitter</a>
+            <a href="https://www.instagram.com/the_official_crushers_clan_/">Instagram</a> 
           </div>
         </div>
       </div>
       <section class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer__logo">COLOR</a>
+            <a href="/" id="footer__logo">CRUSHERS</a>
           </div>
-          <p class="website__rights">© COLOR 2020. All rights reserved</p>
+          <p class="website__rights">© CRUSHERS 2020-22. All rights reserved</p>
           <div class="social__icons">
             <a href="/" class="social__icon--link" target="_blank"
               ><i class="fab fa-facebook"></i
