--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="footer__link--items">
             <h2>Contact Us</h2>
             <a href="araashahuja28@gmail.com">Email</a>
-            <a href="https://www.google.com/maps/place/Robbinsville+Twp,+NJ/@40.2229584,-74.6280658,13z/data=!3m1!4b1!4m5!3m4!1s0x89c160755f229cbf:0x87f384288ef8e520!8m2!3d40.2162036!4d-74.6195327">Location</a>
+            <a href="https://www.google.com/maps/place/Robbinsville+Twp,+NJ/@40.2229584,-74.6280658,13z/data=!3m1!4b1!4m5!3m4!1s0x89c160755f229cbf:0x87f384288ef8e520!8m2!3d40.2162036!4d-74.6195327" target="_blank">Location</a>
           </div>
         </div>
         <div class="footer__link--wrapper">
@@ -118,7 +118,7 @@
           </div>
           <div class="footer__link--items">
             <h2>Social Media</h2>
-            <a href="https://www.instagram.com/the_official_crushers_clan_/">Instagram</a> 
+            <a href="https://www.instagram.com/the_official_crushers_clan_/" target = "_blank">Instagram</a> 
           </div>
         </div>
       </div>
