--- a/index.html
+++ b/index.html
@@ -129,20 +129,14 @@
           </div>
           <p class="website__rights">© CRUSHERS 2020-22. All rights reserved</p>
           <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"
-              ><i class="fab fa-facebook"></i
-            ></a>
-            <a href="/" class="social__icon--link"
+            <a href="https://www.instagram.com/the_official_crushers_clan_/" class="social__icon--link"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="/" class="social__icon--link"
+            <a href="https://www.youtube.com/channel/UC3jKF10Avqlnf4SB-_q8nVA/featured" class="social__icon--link"
               ><i class="fab fa-youtube"></i
             ></a>
-            <a href="/" class="social__icon--link"
+            <a href="https://www.linkedin.com/company/shopcrushers/" class="social__icon--link"
               ><i class="fab fa-linkedin"></i
-            ></a>
-            <a href="/" class="social__icon--link"
-              ><i class="fab fa-twitter"></i
             ></a>
           </div>
         </div>
