major website updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crushers</title>
+    <title>Shop Crushers</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -16,25 +16,25 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#home" id="navbar__logo">HOME</a>
+        <a href="#home" class = "logo" id="navbar__logo"> crushers </a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="#home" class="navbar__links" id="home-page">HOME</a>
+            <a href="#home" class="navbar__links" id="home-page">home</a>
           </li>
           <li class="navbar__item">
-            <a href="#about" class="navbar__links" id="about-page">WHO WE ARE</a>
+            <a href="#about" class="navbar__links" id="about-page"> about us </a>
           </li>
           <li class="navbar__item">
             <a href="#services" class="navbar__links" id="products-page"
-              >PRODUCTS</a
+              >products</a
             >
           </li>
           <li class="navbar__btn">
-            <a href="#order" class="button" id="signup">ORDER</a>
+            <a href="https://www.instagram.com/the_official_crushers_clan_/" target = "_blank" class="button" id="signup"> order </a>
           </li>
         </ul>
       </div>
@@ -43,9 +43,9 @@
     <!-- Hero Section -->
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="hero__heading">THE CRUSHERS <span>VISION</span></h1>
-        <p class="hero__description">Unlimited Possibilities</p>
-        <button class="main__btn"><a href="#">Explore</a></button>
+        <h1 class="hero__heading"> <span> the crushers vision </span></h1>
+        <p class="hero__description"> transforming the fashion culture with aesthetic and affordable clothing </p>
+        <button class="main__btn"><a href="#"> explore </a></button>
       </div>
     </div>
 
@@ -56,22 +56,20 @@
           <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
-          <h1>What do we do?</h1>
-          <h2>Creating clothing that <b>impacts</b></h2>
-          <h2>Meet the team</h2>
-          <p>Kenny, Araash, Henrik, Ronit [MORE INFO LATER]</p>
+          <h1 style = "font-size: 40px; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
+          <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchanndise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
         </div>
       </div>
     </div>
 
     <!-- Products Section -->
     <div class="services" id="services">
-      <h1>Our Products</h1>
+      <h1> our products</h1>
       <div class="services__wrapper">
         <div class="services__card">
           <h2>T-Shirts</h2>
           <p>Available in two logos</p>
-          <div class="services__btn"><button>Get Started</button></div>
+          <div class="services__btn"><button> Get Started </button></div>
         </div>
         <div class="services__card">
           <h2>Colors</h2>
@@ -86,7 +84,7 @@
       <div class="main__container">
         <div class="main__content">
           <h1>Our customers</h1>
-          <button class="main__btn"><a href="#">Sign Up</a></button>
+          <button class="main__btn"><a href="text.html#home"> view our happy customers </a></button>
         </div>
         <div class="main__img--container">
           <div class="main__img--card" id="card-2">
@@ -100,14 +98,14 @@
     <div class="footer__container">
       <div class="footer__links">
         <div class="footer__link--wrapper">
-          <div class="footer__link--items">
+          <div class="footer__link--items"> 
             <h2>About Us</h2>
-            <a href="/sign__up">Araash</a> <a href="/">Kenny</a>
-            <a href="/">Henrik</a> <a href="/">Ronit</a>
+            <a href="https://www.araashahuja.com" target = "_blank" >Araash</a> <a href="https://www.instagram.com/kenny.henderson8/" target = "_blank" >Kenny</a>
+            <a href="https://www.instagram.com/henrik.reyes/" target = "_blank">Henrik</a> <a href="https://www.instagram.com/ronit_rijhwani/" target = "_blank" >Ronit</a>
           </div>
           <div class="footer__link--items">
             <h2>Contact Us</h2>
-            <a href="araashahuja28@gmail.com">Email</a>
+            <a href="mailto:shopcrushers@gmail.com">Email</a>
             <a href="https://www.google.com/maps/place/Robbinsville+Twp,+NJ/@40.2229584,-74.6280658,13z/data=!3m1!4b1!4m5!3m4!1s0x89c160755f229cbf:0x87f384288ef8e520!8m2!3d40.2162036!4d-74.6195327" target="_blank">Location</a>
           </div>
         </div>
@@ -129,13 +127,13 @@
           </div>
           <p class="website__rights">© CRUSHERS 2020-22. All rights reserved</p>
           <div class="social__icons">
-            <a href="https://www.instagram.com/the_official_crushers_clan_/" class="social__icon--link"
+            <a href="https://www.instagram.com/the_official_crushers_clan_/" target = "_blank"  class="social__icon--link"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="https://www.youtube.com/channel/UC3jKF10Avqlnf4SB-_q8nVA/featured" class="social__icon--link"
+            <a href="https://www.youtube.com/channel/UC3jKF10Avqlnf4SB-_q8nVA/featured" target = "_blank" class="social__icon--link"
               ><i class="fab fa-youtube"></i
             ></a>
-            <a href="https://www.linkedin.com/company/shopcrushers/" class="social__icon--link"
+            <a href="https://www.linkedin.com/company/shopcrushers/" target = "_blank" class="social__icon--link"
               ><i class="fab fa-linkedin"></i
             ></a>
           </div>
