minor fix w/ redirect

--- a/text.html
+++ b/text.html
@@ -19,7 +19,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#home" class = "logo" id="navbar__logo"> crushers </a>
+        <a href="index.html#home" class = "logo" id="navbar__logo"> crushers </a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
