animations (in-built css/html)
disregard some of the other files that I used for learning html/css online

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="hero__container">
         <h1 class="hero__heading"> <span> the crushers vision </span></h1>
         <p class="hero__description"> transforming the fashion culture with aesthetic and affordable clothing </p>
-        <button class="main__btn"><a href="#"> explore </a></button>
+        <button class="main__btn"><a href="#about"> explore </a></button>
       </div>
     </div>
 
@@ -53,7 +53,7 @@
     <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-          <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
+          <div class="main__img--card"><i style = "animation: rotation 2s infinite linear;" class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
           <h1 style = "font-size: 40px; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
@@ -64,17 +64,17 @@
 
     <!-- Products Section -->
     <div class="services" id="services">
-      <h1> our products</h1>
+      <h1 class = "our_products"> our products</h1>
       <div class="services__wrapper">
         <div class="services__card">
-          <h2>T-Shirts</h2>
-          <p>Available in two logos</p>
-          <div class="services__btn"><button> Get Started </button></div>
+          <h2 style = "text-transform: lowercase"> T-Shirts </h2>
+          <p style = "text-transform: lowercase"> 2 logos, 46 colors </p>
+          <div class="services__btn"><button style = "background-color: black"> get started &#9737; </button></div>
         </div>
         <div class="services__card">
-          <h2>Colors</h2>
-          <p>With 46 colors, there are over 186 combinations!</p>
-          <div class="services__btn"><button>Get Started</button></div>
+          <h2 style = "text-transform: lowercase"> Sweatshirts </h2>
+          <p style = "text-transform: lowercase"> 2 logos, 20 colors </p>
+          <div class="services__btn"><button style = "background-color: black"> get started &#9737; </button></div>
         </div>
       </div>
     </div>
@@ -83,12 +83,12 @@
     <div class="main" id="sign-up">
       <div class="main__container">
         <div class="main__content">
-          <h1>Our customers</h1>
+          <h1 style = "text-transform: lowercase">Our customers</h1>
           <button class="main__btn"><a href="text.html#home"> view our happy customers </a></button>
         </div>
         <div class="main__img--container">
           <div class="main__img--card" id="card-2">
-            <i class="fas fa-users"></i>
+            <i style = "animation: rotation 2s infinite linear" class ="fas fa-users"></i>
           </div>
         </div>
       </div>
