--- a/products.html
+++ b/products.html
@@ -19,20 +19,20 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html#home" class = "logo" id="navbar__logo"> crushers </a>
+        <a href="index.html/home" class = "logo" id="navbar__logo"> crushers </a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html#home" class="navbar__links" id="home-page">home</a>
+            <a href="index.html/home" class="navbar__links" id="home-page">home</a>
           </li>
           <li class="navbar__item">
-            <a href="index.html#about" class="navbar__links" id="about-page"> about us </a>
+            <a href="index.html/about" class="navbar__links" id="about-page"> about us </a>
           </li> 
           <li class="navbar__item">
-            <a href="index.html#services" class="navbar__links" id="products-page"
+            <a href="index.html/products" class="navbar__links" id="products-page"
               >products</a
             >
           </li>
