button name change

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="main__container">
         <div class="main__content">
           <h1 style = "text-transform: lowercase">Our customers</h1>
-          <button class="main__btn"><a href="products.html/home"> view our happy customers </a></button>
+          <button class="main__btn"><a href="products.html/home"> &#9737; view our products &#9737; </a></button>
         </div>
         <div class="main__img--container">
           <div class="main__img--card" id="card-2">
