--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html/home" class = "logo" id="navbar__logo"> crushers </a>
+        <a href="index.html#home" class = "logo" id="navbar__logo"> crushers </a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="/home" class="navbar__links" id="home-page">home</a>
+            <a href="#home" class="navbar__links" id="home-page">home</a>
           </li>
           <li class="navbar__item">
-            <a href="/about" class="navbar__links" id="about-page"> about us </a>
+            <a href="#about" class="navbar__links" id="about-page"> about us </a>
           </li>
           <li class="navbar__item">
-            <a href="/products" class="navbar__links" id="products-page"
+            <a href="#services" class="navbar__links" id="products-page"
               >products</a
             >
           </li>
@@ -40,12 +40,13 @@
       </div>
     </nav>
 
+
     <!-- Hero Section -->
     <div class="hero" id="home">
       <div class="hero__container">
         <h1 class="hero__heading"> <span> the crushers vision </span></h1>
         <p class="hero__description"> transforming the fashion culture with aesthetic and affordable clothing </p>
-        <button class="main__btn"><a href="/about"> explore </a></button>
+        <button class="main__btn"><a href="#about"> explore </a></button>
       </div>
     </div>
 
@@ -57,7 +58,7 @@
         </div>
         <div class="main__content">
           <h1 style = "font-size: 40px; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
-          <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchandise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
+          <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchanndise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
         </div>
       </div>
     </div>
@@ -83,8 +84,8 @@
     <div class="main" id="sign-up">
       <div class="main__container">
         <div class="main__content">
-          <h1 style = "text-transform: lowercase">Our customers</h1>
-          <button class="main__btn"><a href="products.html/home"> &#9737; view our products &#9737; </a></button>
+          <h1 style = "text-transform: lowercase">Our products</h1>
+          <button class="main__btn"><a href="products.html"> &#9737; view them &#9737; </a></button>
         </div>
         <div class="main__img--container">
           <div class="main__img--card" id="card-2">
