--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <div class="services__card">
           <h2 style = "text-transform: lowercase"> T-Shirts </h2>
           <p style = "text-transform: lowercase"> 2 logos, 46 colors </p>
-          <div class="services__btn"><button style = "background-color: black"> get started &#9737; </button></div>
+          <div class="services__btn"><button href = products.html; style = "background-color: black"> get started &#9737; </button></div>
         </div>
         <div class="services__card">
           <h2 style = "text-transform: lowercase"> Sweatshirts </h2>
           <p style = "text-transform: lowercase"> 2 logos, 20 colors </p>
-          <div class="services__btn"><button style = "background-color: black"> get started &#9737; </button></div>
+          <div class="services__btn"><button chref = "products.html" style = "background-color: black"> get started &#9737; </button></div>
         </div>
       </div>
     </div>
