Added small-logo photos and few style features

--- a/products.html
+++ b/products.html
@@ -43,6 +43,9 @@
       </div>
     </nav>
 
+    <h1 style = "
+    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> Large Logo Tees </h1> 
+
     <div class="row">
       <div class="column">
         <figure> <img src="BigLogoTees/Azalea.jpg"> <figcaption> Azalea </figcaption> </figure>
@@ -71,6 +74,45 @@
         <figure> <img src="BigLogoTees/Saphire.jpg"> <figcaption> Sapphire </figcaption> </figure>
         <figure> <img src="BigLogoTees/Turquoise.jpg"> <figcaption> Turquoise </figcaption> </figure>
         <figure> <img src="BigLogoTees/White.jpg"> <figcaption> White </figcaption> </figure>
+      </div>
+    </div>
+
+    <hr style = "
+    width: 60%; margin: auto; border-width: 5px; border-color: rgb(132, 0, 255); margin-top: 15px; border-radius: 5px;">
+
+  
+
+    <h1 style = "
+    text-align: center; padding: 15px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo Tees </h1> 
+
+    <div class="row">
+      <div class="column">
+        <figure> <img src="SmallLogoTees/Azalea.jpg"> <figcaption> Azalea </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Black.jpg"> <figcaption> Black </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/DarkGreen.jpg"> <figcaption> Dark Green </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/ElectricGreen.jpg"> <figcaption> Electric Green </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Gravel.jpg"> <figcaption> Gravel </figcaption> </figure>
+      </div>
+      <div class="column">
+        <figure> <img src="SmallLogoTees/Grey.jpg"> <figcaption> Grey </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/HotPink.jpg"> <figcaption> Hot Pink </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/LightBlue.jpg"> <figcaption> Light Blue </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/LightPink.jpg"> <figcaption> Light Pink </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/LightPurple.jpg"> <figcaption> Light Purple </figcaption> </figure>
+      </div>
+      <div class="column">
+        <figure> <img src="SmallLogoTees/Maroon.jpg"> <figcaption> Maroon </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Navy.jpg"> <figcaption> Navy </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Orange.jpg"> <figcaption> Orange </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Purple.jpg"> <figcaption> Purple </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Red.jpg"> <figcaption> Red </figcaption> </figure>
+      </div>
+      <div class="column">
+        <figure> <img src="SmallLogoTees/Royal.jpg"> <figcaption> Royal </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Sand.jpg"> <figcaption> Sand </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Sapphire.jpg"> <figcaption> Sapphire </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/Turqoise.jpg"> <figcaption> Turquoise </figcaption> </figure>
+        <figure> <img src="SmallLogoTees/White.jpg"> <figcaption> White </figcaption> </figure>
       </div>
     </div>
 
