--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html#home" class = "logo" id="navbar__logo"> crushers </a>
+        <a href="index.html#home" class = "logo" id="navbar__logo"> CRUSHERS </a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -58,7 +58,7 @@
         </div>
         <div class="main__content">
           <h1 style = "font-size: 40px; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
-          <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchanndise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
+          <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchandise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
         </div>
       </div>
     </div>
