--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html#home" class = "logo" id="navbar__logo"> crushers </a>
+        <a href="index.html#home" class = "logo" id="navbar__logo"> CRUSHERS </a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -115,6 +115,8 @@
         <figure> <img src="SmallLogoTees/White.jpg"> <figcaption> White </figcaption> </figure>
       </div>
     </div>
+
+    <p></p>
 
 
 
