--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
     </nav>
 
     <h1 style = "
-    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> Large Logo Tees </h1> 
+    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> Large Logo <strong>Tees</strong> [$15] </h1> 
 
     <div class="row">
       <div class="column">
@@ -83,7 +83,7 @@
   
 
     <h1 style = "
-    text-align: center; padding: 15px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo Tees </h1> 
+    text-align: center; padding: 15px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo <strong>Tees</strong> [$15] </h1> 
 
     <div class="row">
       <div class="column">
@@ -116,7 +116,43 @@
       </div>
     </div>
 
-    <p></p>
+    <hr style = "
+    width: 60%; margin: auto; border-width: 5px; border-color: rgb(132, 0, 255); margin-top: 15px; border-radius: 5px;">
+
+    <h1 style = "
+    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo <strong>>sweatshirts</strong> [$15] </h1> 
+
+    <div class="row">
+      <div class="column">
+        <figure> <img src="BigLogoTees/Azalea.jpg"> <figcaption> Azalea </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Black.jpg"> <figcaption> Black </figcaption> </figure>
+        <figure> <img src="BigLogoTees/DarkGreen.jpg"> <figcaption> Dark Green </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Gravel.jpg"> <figcaption> Gravel </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Grey.jpg"> <figcaption> Grey </figcaption> </figure>
+      </div>
+      <div class="column">
+        <figure> <img src="BigLogoTees/HotPink.jpg"> <figcaption> Hot Pink </figcaption> </figure>
+        <figure> <img src="BigLogoTees/LightBlue.jpg"> <figcaption> Light Blue </figcaption> </figure>
+        <figure> <img src="BigLogoTees/LightPink.jpg"> <figcaption> Light Pink </figcaption> </figure>
+        <figure> <img src="BigLogoTees/LightPurple.jpg"> <figcaption> Light Purple </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Lime.jpg"> <figcaption> Lime </figcaption> </figure>
+      </div>
+      <div class="column">
+        <figure> <img src="BigLogoTees/Maroon.jpg"> <figcaption> Maroon </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Navy.jpg"> <figcaption> Navy </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Orange.jpg"> <figcaption> Orange </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Purple.jpg"> <figcaption> Purple </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Red.jpg"> <figcaption> Red </figcaption> </figure>
+      </div>
+      <div class="column">
+        <figure> <img src="BigLogoTees/Royal.jpg"> <figcaption> Royal </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Sand.jpg"> <figcaption> Sand </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Saphire.jpg"> <figcaption> Sapphire </figcaption> </figure>
+        <figure> <img src="BigLogoTees/Turquoise.jpg"> <figcaption> Turquoise </figcaption> </figure>
+        <figure> <img src="BigLogoTees/White.jpg"> <figcaption> White </figcaption> </figure>
+      </div>
+    </div>
+
 
 
 
