added sweatshirt small logo images

--- a/products.html
+++ b/products.html
@@ -120,42 +120,39 @@
     width: 60%; margin: auto; border-width: 5px; border-color: rgb(132, 0, 255); margin-top: 15px; border-radius: 5px;">
 
     <h1 style = "
-    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo <strong>>sweatshirts</strong> [$15] </h1> 
+    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo <strong>sweatshirts</strong> [$25] </h1> 
 
     <div class="row">
       <div class="column">
-        <figure> <img src="BigLogoTees/Azalea.jpg"> <figcaption> Azalea </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Black.jpg"> <figcaption> Black </figcaption> </figure>
-        <figure> <img src="BigLogoTees/DarkGreen.jpg"> <figcaption> Dark Green </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Gravel.jpg"> <figcaption> Gravel </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Grey.jpg"> <figcaption> Grey </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Azaela.jpg"> <figcaption> Azalea </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Black.jpg"> <figcaption> Black </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/CarolinaBlue.jpg"> <figcaption> Carolina Blue </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Charcoal.jpg"> <figcaption> Charcoal </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/DarkChocolate.jpg"> <figcaption> Dark Chocolate [add. fee] </figcaption> </figure>
       </div>
       <div class="column">
-        <figure> <img src="BigLogoTees/HotPink.jpg"> <figcaption> Hot Pink </figcaption> </figure>
-        <figure> <img src="BigLogoTees/LightBlue.jpg"> <figcaption> Light Blue </figcaption> </figure>
-        <figure> <img src="BigLogoTees/LightPink.jpg"> <figcaption> Light Pink </figcaption> </figure>
-        <figure> <img src="BigLogoTees/LightPurple.jpg"> <figcaption> Light Purple </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Lime.jpg"> <figcaption> Lime </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/DarkGreen.jpg"> <figcaption> Dark Green </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Green.jpg"> <figcaption> Green </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Grey.jpg"> <figcaption> Grey </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/HotPink.jpg"> <figcaption> Hot Pink </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/LightBlue.jpg"> <figcaption> Light Blue </figcaption> </figure>
       </div>
       <div class="column">
-        <figure> <img src="BigLogoTees/Maroon.jpg"> <figcaption> Maroon </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Navy.jpg"> <figcaption> Navy </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Orange.jpg"> <figcaption> Orange </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Purple.jpg"> <figcaption> Purple </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Red.jpg"> <figcaption> Red </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/LightPink.jpg"> <figcaption> Light Pink </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Maroon.jpg"> <figcaption> Maroon </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Navy.jpg"> <figcaption> Navy </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Olive.jpg"> <figcaption> Olive </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Orange.jpg"> <figcaption> Orange </figcaption> </figure>
       </div>
       <div class="column">
-        <figure> <img src="BigLogoTees/Royal.jpg"> <figcaption> Royal </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Sand.jpg"> <figcaption> Sand </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Saphire.jpg"> <figcaption> Sapphire </figcaption> </figure>
-        <figure> <img src="BigLogoTees/Turquoise.jpg"> <figcaption> Turquoise </figcaption> </figure>
-        <figure> <img src="BigLogoTees/White.jpg"> <figcaption> White </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Purple.jpg"> <figcaption> Purple </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Red.jpg"> <figcaption> Red </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Royal.jpg"> <figcaption> Royal </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/Sand.jpg"> <figcaption> Sand </figcaption> </figure>
+        <figure> <img src="SmallLogoSweatshirts/White.jpg"> <figcaption> White </figcaption> </figure>
       </div>
     </div>
 
-
-
-
-
+    <p></p>
 
     </body>
