added headliners on index.html page

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
       </div>
     </div>
 
+    <hr>
 
-    <!-- Features Section -->
+    <!-- Products Section -->
     <div class="main" id="sign-up">
       <div class="main__container">
         <div class="main__content">
@@ -78,6 +79,8 @@
         </div>
       </div>
     </div>
+
+    <hr>
 
     <!-- Footer Section -->
     <div class="footer__container">
