footer update - submit photos section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>Photos</h2>
-            <a href="araashahuja28@gmail.com">Submit Photos</a> 
+            <a href="mailto:shopcrushers@gmail.com">Submit Photos</a> 
           </div>
           <div class="footer__link--items">
             <h2>Social Media</h2>
