--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="main__img--card"><i style = "animation: rotation 2s infinite linear;" class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
-          <h1 style = "font-size: 40px; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
+          <h1 style = "font-size: 3.5rem; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
           <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchandise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
         </div>
       </div>
@@ -68,8 +68,9 @@
     <div class="main" id="sign-up">
       <div class="main__container">
         <div class="main__content">
-          <h1 style = "text-transform: lowercase">Our products</h1>
-          <button class="main__btn"><a href="products.html"> &#9737; view them &#9737; </a></button>
+          <h1 style = "text-transform: lowercase; font-size: 3.5rem;" >Our products</h1>
+          <button class="main__btn"><a href="products.html"> t-shirts </a></button>
+          <button class = "main__btn"> <a href = "products_ext.html"> sweatshirts </a></button>
         </div>
         <div class="main__img--container">
           <div class="main__img--card" id="card-2">
