--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
           <div class="main__img--card"><i style = "animation: rotation 2s infinite linear;" class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
-          <h1 style = "font-size: 3.5rem; text-transform: lowercase; color: #ffffff"> what do we do? </h1>
-          <h2 style = "font-size: 20px; text-transform: lowercase"> at its inception, the crushers company sold merchandise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high quality merchandise </h2>
+          <h1 style = "font-size: 3.5rem; color: #ffffff"> What do we do? </h1>
+          <h2 style = "font-size: 20px"> At its inception, the crushers company sold merchandise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high-quality merchandise! </h2>
         </div>
       </div>
     </div>
 
 
+  
     <!-- Products Section -->
     <div class="main" id="sign-up">
       <div class="main__container">
         <div class="main__content">
-          <h1 style = "text-transform: lowercase; font-size: 3.5rem;" >Our products</h1>
+          <h1 style = "font-size: 3.5rem;" > Our Products</h1>
           <button class="main__btn"><a href="products.html"> t-shirts </a></button>
           <button class = "main__btn"> <a href = "products_ext.html"> sweatshirts </a></button>
         </div>
