--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="#home" class="navbar__links" id="home-page">home</a>
+            <a href="#home" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="#about" class="navbar__links" id="about-page"> about us </a>
+            <a href="#about" class="navbar__links" id="about-page"> About Us </a>
           </li>
           <li class="navbar__item">
             <a href="#services" class="navbar__links" id="products-page"
-              >products</a
+              >Products</a
             >
           </li>
           <li class="navbar__btn">
