--- a/products_ext.html
+++ b/products_ext.html
@@ -26,14 +26,14 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html#home" class="navbar__links" id="home-page">home</a>
+            <a href="index.html#home" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="index.html#about" class="navbar__links" id="about-page"> about us </a>
+            <a href="index.html#about" class="navbar__links" id="about-page"> About Us </a>
           </li> 
           <li class="navbar__item">
             <a href="index.html#services" class="navbar__links" id="products-page"
-              >products</a
+              >Products</a
             >
           </li>
           <li class="navbar__btn">
@@ -44,7 +44,7 @@
     </nav>
 
     <h1 style = "
-    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> big Logo <strong>sweatshirts</strong> [$25] </h1> 
+    text-align: center; padding: 10px; color: white; font-family: sans-serif;"> Big Logo <strong>Sweatshirts</strong> [$25] </h1> 
 
     <div class="row">
       <div class="column">
@@ -80,7 +80,7 @@
     <hr>
 
     <h1 style = "
-    text-align: center; padding: 10px; color: white; font-family: sans-serif; text-transform: lowercase"> small Logo <strong>sweatshirts</strong> [$25] </h1> 
+    text-align: center; padding: 10px; color: white; font-family: sans-serif"> Small Logo <strong>Sweatshirts</strong> [$25] </h1> 
 
     <div class="row">
       <div class="column">
