--- a/products.html
+++ b/products.html
@@ -26,14 +26,14 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html#home" class="navbar__links" id="home-page">home</a>
+            <a href="index.html#home" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="index.html#about" class="navbar__links" id="about-page"> about us </a>
+            <a href="index.html#about" class="navbar__links" id="about-page"> About Us </a>
           </li> 
           <li class="navbar__item">
             <a href="index.html#services" class="navbar__links" id="products-page"
-              >products</a
+              >Products</a
             >
           </li>
           <li class="navbar__btn">
