--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <!-- Hero Section -->
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="hero__heading"> <span> the crushers vision </span></h1>
-        <p class="hero__description"> transforming the fashion culture with aesthetic and affordable clothing </p>
-        <button class="main__btn"><a href="#about"> explore </a></button>
+        <h1 class="hero__heading"> <span> The Crushers <em>Vision</em> </span></h1>
+        <p class="hero__description"> Transforming the fashion culture with aesthetic and affordable clothing while giving back to the community </p>
+        <button class="main__btn"><a href="#about"> Explore </a></button>
       </div>
     </div>
 
