--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Hero Section -->
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="hero__heading"> <span> The Crushers <em>Vision</em> </span></h1>
+        <h1 class="hero__heading"> <span> THE CRUSHERS <em>VISION</em> </span></h1>
         <p class="hero__description"> Transforming the fashion culture with aesthetic and affordable clothing while giving back to the community </p>
         <button class="main__btn"><a href="#about"> Explore </a></button>
       </div>
@@ -112,7 +112,7 @@
           <div class="footer__logo">
             <a href="/" id="footer__logo">CRUSHERS</a>
           </div>
-          <p class="website__rights">© CRUSHERS 2020-22. All rights reserved</p>
+          <p class="website__rights">© CRUSHERS 2020-22. All rights reserved.</p>
           <div class="social__icons">
             <a href="https://www.instagram.com/the_official_crushers_clan_/" target = "_blank"  class="social__icon--link"
               ><i class="fab fa-instagram"></i
@@ -124,6 +124,7 @@
               ><i class="fab fa-linkedin"></i
             ></a>
           </div>
+
         </div>
       </section>
     </div>
