--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="#home" class="navbar__links" id="home-page">Home</a>
+            <a href="index.html#home" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
             <a href="#about" class="navbar__links" id="about-page"> About Us </a>
           </li>
           <li class="navbar__item">
-            <a href="#services" class="navbar__links" id="products-page"
+            <a href="index.html#products" class="navbar__links" id="products-page"
               >Products</a
             >
           </li>
@@ -41,7 +41,7 @@
     </nav>
 
 
-    <!-- Hero Section -->
+    <!-- home -->
     <div class="hero" id="home">
       <div class="hero__container">
         <h1 class="hero__heading"> <span> THE CRUSHERS <em>VISION</em> </span></h1>
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <!-- About Section -->
+    <!-- about -->
     <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
@@ -66,7 +66,7 @@
 
   
     <!-- Products Section -->
-    <div class="main" id="sign-up">
+    <div class="main" id="products">
       <div class="main__container">
         <div class="main__content">
           <h1 style = "font-size: 3.5rem;" > Our Products</h1>
@@ -128,6 +128,8 @@
         </div>
       </section>
     </div>
+
+    <div> designed by <em>araash ahuja</em></div>
 
     <script src="app.js"> </script>
   </body>
