--- a/products_ext.html
+++ b/products_ext.html
@@ -32,7 +32,7 @@
             <a href="index.html#about" class="navbar__links" id="about-page"> About Us </a>
           </li> 
           <li class="navbar__item">
-            <a href="index.html#services" class="navbar__links" id="products-page"
+            <a href="index.html#products" class="navbar__links" id="products-page"
               >Products</a
             >
           </li>
