added git profile

--- a/index.html
+++ b/index.html
@@ -125,11 +125,15 @@
             ></a>
           </div>
 
+
+
         </div>
       </section>
     </div>
 
-    <div> designed by <em>araash ahuja</em></div>
+    <div style = "display: block; background-color: black"> 
+      <p style = " background-color: black; color: white; text-align: center; padding: 20px;"> designed by <em> <a class = "araash_tag" target = "_blank" href = "https://github.com/Veronicle" style = "color: white; text-decoration: none; font-weight:bolder "> araash ahuja </a></em> </p>
+    </div>
 
     <script src="app.js"> </script>
   </body>
