--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
         <div class="main__content">
           <h1 style = "font-size: 3.5rem; color: #ffffff"> What do we do? </h1>
           <h2 style = "font-size: 20px"> At its inception, the crushers company sold merchandise to represent its associated clash of clans clan, though it has now progressed to a fully-fledged business with high-quality merchandise! </h2>
+          <button style = "
+          margin-top: 15px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-decoration: none;
+          padding: 10px 20px;
+          height: 100%;
+          width: 100%;
+          border: none;
+          outline: none;
+          border-radius: 4px;
+          background: #9518fc;
+          color: #fff;
+          transition: all 0.3s ease;"> <a href = "cfac.html" style = "font-size: 1.5rem; color: #ffffff"> Learn about CFAC, our nonprofit branch </a> </button>
+
         </div>
       </div>
     </div>
@@ -80,6 +96,8 @@
         </div>
       </div>
     </div>
+
+
 
     <!-- Footer Section -->
     <div class="footer__container">
