animations on the CFAC page

--- a/cfac.html
+++ b/cfac.html
@@ -45,19 +45,19 @@
 
         <div style = "
         justify-content: center; text-align: center; background: #000000">
-            <h1 style = "
+            <h1 class = "title" style = "
             text-align: center; padding: 15px; color: rgb(255, 255, 255); font-family: sans-serif; font-size: 40px"> Crushers For A <strong>Cause</strong></h1> 
 
             <hr style   >
 
-            <p style = "
+            <p class = "init__description" style = "
             text-align: center;padding: 15px;  font-family: sans-serif; margin-left: 150px; margin-right: 150px; color: white; font-size: 30px  
             "> Our mission is simple: provide quality and visually-appealing clothing at affordable prices. As we have been fulfilling this mission, 
             the lives of those less fortunate than our customers come to mind. Homeless people are a large people group who struggle to find shelter, 
             food, and clothing. As such, it is our promise as a company that we will donate <em>1</em> t-shirt or sweatshirt for every <em>5</em> items we sell. 
             If you immediately want to make an impact, feel free to donate $10 for a t-shirt or $20 for a sweatshirt to be given to a homeless person.</p>
 
-            <h2 style = "text-align: center; padding: 15px; color: rgb(255, 255, 255); font-family: sans-serif; font-size: 40px; animation: fadeIn 1s;"> <em>CFAC</em> summed up: </h2>
+            <h2 class ="subhead" style = "text-align: center; padding: 15px; color: rgb(255, 255, 255); font-family: sans-serif; font-size: 40px; "> <em>CFAC</em> summed up: </h2>
             <li class = "cfac__bullet" > A way for Crushers to give back to the homeless community</li>
             <li class = "cfac__bullet" > The company will donate 1 t-shirt/sweatshirt for 5 orders </li>
             <li class = "cfac__bullet" > Optionally, donating $10 or $20 for a t-shirt or sweatshirt, respectively will automatically increase the donation supply</li>
@@ -66,8 +66,8 @@
 
             <hr>
 
-            <h2 style = "
-            text-align: center; margin-top: 30px; color: rgb(255, 255, 255); font-family: sans-serif; font-size: 40px"
+            <h2 class = "subhead" style = "
+            text-align: center; margin-top: 30px; color: rgb(255, 255, 255); font-family: sans-serif; font-size: 40px;"
             > Make a change today! </h2>
 
             <img src = "standardPhotos.jpg" class = "ending_img">
