trying to fix firebase

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             >
           </li>
           <li class="navbar__btn">
-            <a href="https://www.instagram.com/the_official_crushers_clan_/" target = "_blank" class="button" id="signup"> ORDER </a>
+            <a href="order.html" target = "_blank" class="button" id="signup"> ORDER </a>
           </li>
         </ul>
       </div>
