styling / navbar in order page

--- a/cfac.html
+++ b/cfac.html
@@ -15,7 +15,7 @@
 
   </head>
 
-  <body class>
+  <body>
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
