--- a/cfac.html
+++ b/cfac.html
@@ -54,14 +54,14 @@
             text-align: center;padding: 15px;  font-family: sans-serif; margin-left: 150px; margin-right: 150px; color: white; font-size: 30px  
             "> Our mission is simple: provide quality and visually-appealing clothing at affordable prices. As we have been fulfilling this mission, 
             the lives of those less fortunate than our customers come to mind. Homeless people are a large people group who struggle to find shelter, 
-            food, and clothing. As such, it is our promise as a company that we will donate <em>1</em> t-shirt or sweatshirt for every <em>5</em> items we sell. 
-            If you immediately want to make an impact, feel free to donate $10 for a t-shirt or $20 for a sweatshirt to be given to a homeless person.</p>
+            food, and clothing. As such, it is our promise as a company that we will donate <em>1</em> t-shirt or sweatshirt for every <em>1</em> item that we sell. 
+            If you immediately want to make an impact, feel free to donate $10 for a t-shirt or $20 for a sweatshirt to be given to a homeless person.
+            Our first phase of donations will take place on August-end.</p>
 
             <h2 class ="subhead" style = "text-align: center; padding: 15px; color: rgb(255, 255, 255); font-family: sans-serif; font-size: 40px; "> <em>CFAC</em> summed up: </h2>
             <li class = "cfac__bullet" > A way for Crushers to give back to the homeless community</li>
-            <li class = "cfac__bullet" > The company will donate 1 t-shirt/sweatshirt for 5 orders </li>
-            <li class = "cfac__bullet" > Optionally, donating $10 or $20 for a t-shirt or sweatshirt, respectively will automatically increase the donation supply</li>
-            <li class = "cfac__bullet"> We will match all donations customers directly pay for!</li>
+            <li class = "cfac__bullet" > The company will donate 1 t-shirt/sweatshirt for every order </li>
+            <li class = "cfac__bullet" > Optionally, donating $10 or $20 for a t-shirt or sweatshirt, respectively, will automatically increase the donation supply</li>
             <li class = "cfac__bullet" > Should you have any questions, contact <a class = "cfac__mail" href ="mailto:araashahuja28@gmail.com">Araash</a> or the <a class = "cfac__mail" href = "mailto:shopcrushers@gmail.com">Crushers email</a> directly</li>
 
             <hr>
