For Mr Patterson (3XL option)

--- a/order.html
+++ b/order.html
@@ -90,6 +90,8 @@
                 <option value = "M"> M </option>
                 <option value = "L"> L </option>
                 <option value = "XL"> XL </option>
+                <option value = "XXL"> XXL </option>
+                <option value = "XXXL"> XL </option>
             </select>
 
             <label for = "color"> Color </label>
