--- a/introToHTML/flexbox.html
+++ b/introToHTML/flexbox.html
@@ -40,9 +40,9 @@
 
         <div style = "background-color: lightblue; width: 100px;"> Div 1 Text </div>
 
-        <div style = "background-color: lightpink; flex: i1;"> flex: 1 <p>Araash</p></div>
+        <div style = "background-color: lightpink; flex: 1;"> flex: 1 <p>Araash</p></div>
 
-        <div style = "background-color: lightblue; flex: i2;"> flex: 2 </div>
+        <div style = "background-color: lightblue; flex: 2;"> flex: 2 </div>
 
     </div>
 
