Small size changes

--- a/order.html
+++ b/order.html
@@ -91,7 +91,7 @@
                 <option value = "L"> L </option>
                 <option value = "XL"> XL </option>
                 <option value = "XXL"> XXL </option>
-                <option value = "XXXL"> XL </option>
+                <option value = "XXXL"> XXXL </option>
             </select>
 
             <label for = "color"> Color </label>
